sales project updated

--- a/templates/aboutit2.html
+++ b/templates/aboutit2.html
@@ -62,12 +62,23 @@
   <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
 </svg> <a href="https://github.com/inotin" style="margin-left:10px; color:black;">inotin</a> </p>
 
-</div>
+
       <p> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
       </svg> <a href="https://www.linkedin.com/in/inotin/" style="margin-left:10px; color:black;">inotin</a> </p>
       <!-- contact section end -->
-
+      <br>
+      <br>
+      <br>
+      <h6>Città di residenza</h6>
+      <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+</svg> Milano</p>
+      <br>
+      <h6>Cittadinanza</h6>
+      <p>Malta, Russia</p>
+    </div>
     <div class="row" style="margin-top:15px;">
     <h4>Competenze software</h4>
     <!-- <img src="{%static 'images/skills.png'%}" style="height:200px; width:300px;" alt=""> -->
@@ -213,14 +224,14 @@
     <div class="row" style="margin-top:15px;">
     <h4>Interessi e passatempi</h4>
     <p> <a href="https://www.chess.com/member/inotin" style="color:black;">Scacchi</a>,
-      <a href="" style="color:black;">Aviazione (aerodinamica)</a>, <a href="" style="color:black;">Storia</a>, <a href="https://sun9-37.userapi.com/impf/c834103/v834103427/1451da/8Ttvo1mKSok.jpg?size=960x639&quality=96&sign=20fa25ce47056580f876dc9025ff0733&type=album" style="color:black;">Batteria</a>, <a href="https://www.tersis.design" style="color:black;">Design</a> </p>
+      <a href="https://sun9-37.userapi.com/impf/c834103/v834103427/1451da/8Ttvo1mKSok.jpg?size=960x639&quality=96&sign=20fa25ce47056580f876dc9025ff0733&type=album" style="color:black;">Batteria</a>, <a href="https://www.tersis.design" style="color:black;">Design</a>, <a href="https://previews.dropbox.com/p/thumb/ABPAtS5dTtBHUam1jZmRKBm3Ffae22Z74rO2b7xgobwUveNLq-6f4TFSi_2APIGZUGdnxmkowcEDL1RZ4Za9m-pwZYj0jifn9Bxeez9uj6mMG51WWIFascjvIsu21_Fe1ONYGT8Z_klmfH5HXWYYYS7PsfwpYBYWwLDXQhxqWXQyCdnicYC7T5B1GUv-geBoNwMhI9aeiBMiRbOXjOL97-K2Fs7LF1W60eABoBe70gCt3paqU10Yoaz29zRNq-gg3mLvZrn_Nx2eOTLJpfCvDkxXp73lg0NOnPC5eBPsk5KT5i49OxqSR4e7pc7YQiCfKrgEHx9yMe8SncWUZib4DnirTYPyINZ5uvFzXmocUU6Mmg/p.png?fv_content=true&size_mode=5" style="color:black;">Aviazione (aerodinamica)</a>, <a href="" style="color:black;">Storia</a> </p>
     </div>
 
 
     <div class="row" style="margin-top:15px;">
     <h4>Qualità personali</h4>
     <p>
-      Curioso, gioco di squadra, creativo, orientato agli obiettivi, mirato, mentalmente aperto
+      Curioso, creativo, orientato agli obiettivi, mentalmente aperto
     </p>
     </div>
 
@@ -243,7 +254,7 @@
         </div>
 
         <div class="col-sm">
-        <h5>Laurea magistrale (specialistica) dell'<a href="https://bmstu.ru/en/" style="color:black;">'Università tecnica statale moscovita N. Ė. Bauman</a></h5>
+        <h5>Laurea magistrale (specialistica) dell'<a href="https://bmstu.ru/en/" style="color:black;">Università tecnica statale moscovita N. Ė. Bauman</a></h5>
         <h7> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
     <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
     <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
@@ -313,8 +324,8 @@
 <li>Assistenza tecnica del team di vendita in termini di fornitura di una soluzione tecnologica appropriata per un determinato prodotto</li>
 <br>
 <h6>Raggiungimenti:</h6>
-<li>Sviluppato uno strumento software per il team di vendita basato su Visual Basic che ha automatizzato la preparazione delle quotazioni che ha aumentato l'efficienza di 3-4 volte. La logica sviluppata è stata successivamente utilizzata durante l'aggiornamento del sistema ERP esistente.</li>
-<li>Guidato un nuovo ramo di prodotti e creato un programma di marketing per il suo sviluppo</li>
+<li>Sviluppo del strumento software per il team di vendita basato su Visual Basic che ha automatizzato la preparazione delle quotazioni che ha aumentato l'efficienza di 3-4 volte. La logica sviluppata è stata successivamente utilizzata durante l'aggiornamento del sistema ERP esistente.</li>
+<li>Gestione di una nuova direzione di prodotti e creazaione di un programma di marketing per il suo sviluppo</li>
 
 </p>
       </div>
@@ -337,13 +348,13 @@
   <h6>Funzioni principali:</h6>
   <p style="margin-top:10px;">
     <li>Pianificazione del reparto CNC</li>
-    <li>Gestione operativa del reparto CNC e relativa scalabilità</li>
+    <li>Gestione operativa del reparto CNC e suo espansione</li>
     <li>Sviluppo e valorizzazione delle operazioni CNC</li>
    <br>
   <h6>Raggiungimenti:</h6>
-  <li>Sviluppo della struttura di reparto CNC</li>
+  <li>È stata sviluppata la struttura di reparto CNC</li>
   <li>Sviluppo del sistema di utensili che consente di elaborare più tipi di prodotti con tempi di fermo minimi</li>
-  <li>Sviluppo del sistema educativo che consente di crescere lavoratori CNC da dipendenti senza precedenti esperienze</li>
+  <li>Sviluppo di un sistema di formazione che consente di preparare i lavoratori CNC senza esperienza iniziale</li>
   </p>
         </div>
       </div>
@@ -371,9 +382,9 @@
      <br>
   <h6>Raggiungimenti:</h6>
   <li>Aumento della produzione di circa il 20% grazie all'automatizzazione dei processi e all'ottimizzazione delle aree di lavoro basate su elementi del Toyota Production System </li>
-  <li>Riduzione dei costi di produzione del 15% grazie all'ottimizzazione della composizione dei materiali e all'automatizzazione</li>
+  <li>Riduzione dei costi di produzione del 15% a causa dell'ottimizzazione della composizione dei materiali e all'automatizzazione</li>
   <li>Adattamento dell'approccio scientifico al processo di sviluppo dei materiali che ne ha aumentato l'efficienza e consentito la tracciabilità degli esperimenti</li>
-  <li>Inizio e guida di nuovo ramo della lavorazione dei metalli che ha permesso una più rapida soddisfazione delle richieste interne di pezzi di ricambio e ha fornito la possibilità di lavorare con clienti esterni</li>
+  <li>Fondazione e gestione di nuovo ramo della lavorazione dei metalli che ha permesso una più rapida soddisfazione delle richieste interne di pezzi di ricambio e ha fornito la possibilità di lavorare con clienti esterni</li>
   <li>Implementato sistema di visione artificiale per la registrazione della produzione su nastro trasportatore</li>
 </p>
           </div>
@@ -397,7 +408,7 @@
       <h6>Funzioni principali:</h6>
       <p style="margin-top:10px;">
         <li>Consulenza di studenti che preparano tesi di laurea </li>
-        <li>Supporto di processi educativi del dipartimento</li>
+        <li>Supporto di processi operativi del dipartimento</li>
 
       </p>
             </div>
@@ -532,8 +543,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right;">
-        <h5>11th August 1991</h5>
-        <p>Was born in Kostanay, Kazakhstan &#x1F382;</p>
+        <h5>11 agosto 1991</h5>
+        <p>Sono nato a Kostanay, Kazakistan &#x1F382;</p>
       </div>
 
       <div class="col-sm-2">
@@ -676,8 +687,8 @@
       </div>
 
       <div class="col-sm-5" style="text-align: left; ">
-        <h5>August 1997</h5>
-        <p>Moved to Moscow, Russia 🇰🇿➝🇷🇺</p>
+        <h5>Agosto 1997</h5>
+        <p>Trasferito a Mosca, Russia 🇰🇿➝🇷🇺</p>
       </div>
     </div>
 
@@ -753,8 +764,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>September 2008</h5>
-        <p>Started studying Nanotechnologies in Electronics in Bauman Moscow State University 🏫</p>
+        <h5>Settembre 2008</h5>
+        <p>Ha iniziato a studiare nanotecnologie in elettronica presso l'Università tecnica statale moscovita N. Ė. Bauman 🏫</p>
       </div>
 
       <div class="col-sm-2">
@@ -838,8 +849,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>June 2014</h5>
-        <p>Graduated with honors from Bauman Moscow State University &#x1F393;</p>
+        <h5>Giugno 2014</h5>
+          <p>Laureato con lode presso l'Università tecnica statale moscovita N. Ė. Bauman &#x1F393;</p>
       </div>
 
       <div class="col-sm-2">
@@ -933,8 +944,8 @@
         </div>
       </div>
       <div class="col-sm-5" style="text-align: left">
-        <h5>August 2014</h5>
-        <p>Joined Ostec-EC company as a consultant in microelectronics technology <img src="{%static 'images/chip.png'%}" alt=""> </p>
+        <h5>Agosto 2014</h5>
+            <p>Entra a far parte della società Ostec-EC come consulente nella tecnologia microelettronica <img src="{%static 'images/chip.png'%}" alt=""> </p>
       </div>
     </div>
 
@@ -1002,8 +1013,8 @@
         </div>
       </div>
       <div class="col-sm-5" style="text-align: left">
-        <h5>November 2015</h5>
-        <p>Joined PolimerDesign company as a head of the newly established CNC department ⚙️</p>
+        <h5>Novembre 2015</h5>
+          <p>Entra a far parte della PolimerDesign company come responsabile del nuovo reparto CNC ⚙️</p>
       </div>
     </div>
 
@@ -1085,8 +1096,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>September 2017</h5>
-        <p>Got married 💒 and started my PhD thesis</p>
+        <h5>Settembre 2017</h5>
+          <p>Mi sono sposato 💒 e ho iniziato la mia tesi di dottorato</p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
@@ -1136,8 +1147,8 @@
         </div>
       </div>
       <div class="col-sm-5" style="text-align: left">
-        <h5>November 2017</h5>
-        <p>Got promoted in PolimerDesign company as a technical consultant of CEO 👨‍💼</p>
+        <h5>Novembre 2017</h5>
+          <p>Promosso in azienda PolimerDesign come consulente tecnico di CEO (CTO) 👨‍💼</p>
       </div>
     </div>
 
@@ -1216,8 +1227,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>August 2019</h5>
-        <p>Started Master's in Data Science at Denver University 💻🇺🇸</p>
+        <h5>Agosto 2019</h5>
+          <p>Iniziato Master in Scienza dei dati presso l'Università di Denver 💻🇺🇸</p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
@@ -1315,8 +1326,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>January 2020</h5>
-        <p>Started learning Italian🇮🇹</p>
+        <h5>Gennaio 2020</h5>
+          <p>Iniziato ad imparare l'italian🇮🇹</p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
@@ -1413,8 +1424,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>March 2021</h5>
-        <p>Obtained PhD degree in Mechanical Engineering Technologies and Materials Science 🔬🎉</p>
+        <h5>Marzo 2021</h5>
+          <p>Diventato il dottorato di ricerca in Ingegneria Meccanica Tecnologie e Scienza dei Materiali 🔬🎉</p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
@@ -1469,8 +1480,8 @@
     <!-- left card segment -->
     <div class="row">
       <div class="col-sm-5" style="text-align: right">
-        <h5>August 2021</h5>
-        <p>Planned graduation from Denver University 👨‍🎓 </p>
+        <h5>Agosto 2021</h5>
+        <p>Laurea pianificata presso l'Università di Denver👨‍🎓 </p>
       </div>
       <div class="col-sm-2">
         <div class="row" style="height: 100%">
