--- a/templates/instaSeer.html
+++ b/templates/instaSeer.html
@@ -17,6 +17,18 @@
     <a href="{%url 'home'%}"><button type="button" style="margin-top:20px; margin-left:12px; color:grey;" class="btn btn-light">← Back home</button></a>
     <h1 style="margin-top:30px; margin-left: 10px;">instaSeer<a href="https://github.com/inotin/instaSeer"><img style="height:28px" src="{%static 'GitHub-Mark-120px-plus.png'%}" alt=""></a></h1>
     <div class="container" style="max-width: 100%;">
+
+      <div class="row" style="margin-bottom:30px;">
+        <div class="col-lg">
+            <span class="badge rounded-pill bg-primary">Image processing</span>
+            <span class="badge rounded-pill bg-primary">Regression</span>
+            <span class="badge rounded-pill bg-primary">Classification</span>
+            <span class="badge rounded-pill bg-primary">Web Scraping</span>
+            <!-- <span class="badge rounded-pill bg-primary">APIs</span>
+            <span class="badge rounded-pill bg-primary">Neural networks</span> -->
+        </div>
+      </div>
+
       <div class="row" >
         <div class="col-lg-4">
           <h5>Overview</h5>
