--- a/templates/moviePosters.html
+++ b/templates/moviePosters.html
@@ -12,6 +12,19 @@
     <a href="{%url 'home'%}"><button type="button" style="margin-top:20px; margin-left:12px; color:grey;" class="btn btn-light">← Back home</button></a>
     <h1 style="margin-top:30px; margin-left: 10px;">The Secrets of Movie Posters <a href="https://github.com/inotin/moviePosters"><img style="height:28px" src="{%static 'GitHub-Mark-120px-plus.png'%}" alt=""></a></h1>
     <div class="container" style="max-width: 100%;">
+
+      <div class="row" style="margin-bottom:30px;">
+        <div class="col-lg">
+            <span class="badge rounded-pill bg-primary">Image processing</span>
+            <span class="badge rounded-pill bg-primary">Data Visualization</span>
+            <!-- <span class="badge rounded-pill bg-primary">Classification</span> -->
+            <span class="badge rounded-pill bg-primary">Web Scraping</span>
+            <span class="badge rounded-pill bg-primary">APIs</span>
+            <!-- <span class="badge rounded-pill bg-primary">Neural networks</span> -->
+        </div>
+      </div>
+
+
       <div class="row" >
         <div class="col-lg-4">
           <h5>Overview</h5>
@@ -29,7 +42,7 @@
 
         </div>
         <div class="col-lg-8">
-          <img style="width: 100%; margin-top: 45px;" src="{%static 'movies_img1.png'%}" alt="img1">
+          <img style="width: 100%; margin-top: 45px;" src="{%static 'moviePosters/movies_img1.png'%}" alt="img1">
 
         </div>
       </div>
@@ -47,7 +60,7 @@
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 400px;" src="{%static 'movies_hist.html'%}" title="Histogram" ></iframe>
+          <iframe style="width: 100%; height: 400px;" src="{%static 'moviePosters/movies_hist.html'%}" title="Histogram" ></iframe>
 
         </div>
       </div>
@@ -65,7 +78,7 @@
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
+          <iframe style="width: 100%; height: 600px;" src="{%static 'moviePosters/movies_years.html'%}" title="Colors vs Years" ></iframe>
 
         </div>
       </div>
@@ -85,8 +98,8 @@
             </p>
         </div>
         <div class="col-lg-8">
-          <img style="width: 100%; margin-top: 45px;" src="{%static 'movies_img2.png'%}" alt="img2">
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_genres.html'%}" title="Colors vs Genres" ></iframe>
+          <img style="width: 100%; margin-top: 45px;" src="{%static 'moviePosters/movies_img2.png'%}" alt="img2">
+          <iframe style="width: 100%; height: 620px;" src="{%static 'moviePosters/movies_genres.html'%}" title="Colors vs Genres" ></iframe>
 
         </div>
       </div>
@@ -106,7 +119,7 @@
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_countries.html'%}" title="Colors vs Countries" ></iframe>
+          <iframe style="width: 100%; height: 620px;" src="{%static 'moviePosters/movies_countries.html'%}" title="Colors vs Countries" ></iframe>
 
         </div>
       </div>
@@ -121,7 +134,7 @@
         </div>
 
         <div class="col-lg-8">
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_map.html'%}" title="Colors vs Countries" ></iframe>
+          <iframe style="width: 100%; height: 620px;" src="{%static 'moviePosters/movies_map.html'%}" title="Colors vs Countries" ></iframe>
         </div>
 
       </div>
