--- a/static/ds.css
+++ b/static/ds.css
@@ -1,3 +1,15 @@
+.overlay{
+    opacity:0.7;
+    background-color:#ccc;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+}
+
+
 .logo1{
   transition: 700ms ease;
   position: relative;
