--- a/templates/airfoils.html
+++ b/templates/airfoils.html
@@ -12,6 +12,17 @@
     <a href="{%url 'home'%}"><button type="button" style="margin-top:20px; margin-left:12px; color:grey;" class="btn btn-light">← Back home</button></a>
     <h1 style="margin-top:30px; margin-left: 10px;">Airfoils <a href="https://github.com/inotin/airfoils"><img style="height:28px" src="{%static 'GitHub-Mark-120px-plus.png'%}" alt=""></a></h1>
     <div class="container" style="max-width: 100%;">
+
+      <div class="row" style="margin-bottom:30px;">
+        <div class="col-lg">
+            <span class="badge rounded-pill bg-primary">Regression</span>
+            <span class="badge rounded-pill bg-primary">Neural Networks</span>
+            <span class="badge rounded-pill bg-primary">Web Scraping</span>
+            <!-- <span class="badge rounded-pill bg-primary">APIs</span>
+            <span class="badge rounded-pill bg-primary">Neural networks</span> -->
+        </div>
+      </div>
+      
       <div class="row" >
         <div class="col-lg-4">
           <h5>Overview</h5>
@@ -35,7 +46,8 @@
             The problem is that there are not many available sources, usually the this type of information is provided in the form of experimental report scans.
             Only few of them are digitized by enthusiasts, one of such files can be found here: <a href="https://forums.x-plane.org/index.php?/files/file/2538-naca-report-tr-824-digitized/">Source</a> <br>
           To solve this problem in the future it is possible to use CFD simulations for gaining new data or form a team which would digitize experimental reports <br>
-          <b>Features:</b> <br>
+          <br>
+          <b>Features:</b>
           <li>Coordinates of points froming an airfoil</li>
           <li>Angle of attack - angle between airflow and airfoil which affects aerodynamic properties</li>
           <br>
@@ -108,69 +120,60 @@
 
       <div class="row" style="margin-top:40px">
         <div class="col-lg-4">
-          <h6 style="margin-top:40px">Time series decomposition</h6>
-          <p>Boxplots were formed which allow to assess the significance of the differences month-to-month (seasonality) and year-to-year (trend)</p>
-          <p>It can be seen that though in 2020 the interquartile range is enormous (thanks to gloabal pandemy) there's a slight positive trend. <br>
-          Seasonality is pretty distinct which is a good sign for predictions.</p>
+          <h5 style="margin-top:40px">Model</h5>
+          <p>As for the models I initially considered Random Forest, XGBoost Regressor and deep neural network which seem to fit well this task with non-linear relationships.</p>
+          <p>Their comparative metrics are given in the table on the right</p>
+          <p>The results are not outstanding but better than I expected.</p>
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 850px;" src="{%static 'sales/decomposition.html'%}" title="decomposition" ></iframe>
-          <img style="width: 100%" src="{%static 'sales/boxPlots.png'%}" alt="boxplots">
-        </div>
-      </div>
-
-
-
-      <div class="row" >
-        <div class="col-lg-4">
-          <h4 style="margin-top:70px">Modelling</h4>
-          <h5>Regression</h5>
-          I chose regression based modelling as a first approach which allows to build comparatevily simple and interpretable models (compared to neural networks).
-          <br> What I decided to do is to go through several modeling techniques:
-          <li>Random forest regression</li>
-          <li>Gradient boosting</li>
-          <li>CatBoost</li>
-          <li>XGBoost</li>
-          But before that it's necessary to generate some features.
-          <br>
-          <h6>Feature generation</h6>
-          <p>As soon as the data is 1-dimensional to build a more accurate model we need to generate more features. <br>
-          One approach is to generate polynomial features, but as soon as we have time series data it makes more sense to generate features
-          such as previous values (lags), rollong sum and rolling mean. Tim window for feature generation is 52 week.</p>
-
-        </div>
-        <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
-
-        </div>
-      </div>
-
-
-
-      <div class="row" >
-        <div class="col-lg-4">
-          <h5>LSTM</h5>
-          I was not totally satisfied with metrics for regression models and decided to try a more complex approach - neural networks.
-          If we consider time series, the natural choice is a long short-term memory neural networks which are basically a type of
-          recurrent neural networks which allow to take into the account precedent data (or 'remember' it) so it's a great option for time series prediction tasks.
-          <br>
-          I experimented with following approaches:
-          <li>Vanilla LSTM with rule-of-thumb hyperparameters</li>
-          <li>Vanilla LSTM with rule-of-thumb hyperparameters and early stopping</li>
-          <li>Stacked LSTM</li>
-          <li>Vanilla LSTM with a grid search for hyperparameter tuning (defining the optimal number of hidden units and epochs) </li>
-          <br>
-          <h6>Train and test sets</h6>
-          I split my data into train and test sets with proportions of 85% and 15% respectively which can seem strange.
-          But what I wanted to do is to gain maximum sequence information due to unusual data of year 2020, which was caused by Covid.
-          Moreover, the train set had a spike in January, common for all precedent years, which is a nice feature for estimating accuracy of the model.
-
-        </div>
-        <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
+          <table class="table table-hover table-sm" style="margin-top:40px;margin-left:40px;vertical-align: middle;">
+            <thead>
+              <tr>
+                <th scope="col">Model name</th>
+                <th scope="col">Model selection method</th>
+                <th scope="col">Model parameters</th>
+                <th scope="col">RMSE</th>
+                <th scope="col">R2</th>
+                <th scope="col">Predicted vs Real</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="table-success">
+                <th scope="row">Random Forest Regressor</th>
+                <td>RandomizedSearchCV</td>
+                <td>'n_estimators': 30 <br>
+                  'min_samples_split': 2 <br>
+                  'min_samples_leaf': 2 <br>
+                  'max_features': 'auto' <br>
+                  'max_depth': 110 <br>
+                  'bootstrap': True</td>
+                <td>0.076</td>
+                <td>0.993</td>
+                <td> <img style="width: 150px; height: 150;" src="{%static 'airfoils/airfoils_rfr_res.png'%}" alt=""></td>
+              </tr>
+              <tr class>
+                <th scope="row">XGBoost Regressor</th>
+                <td>RandomizedSearchCV</td>
+                <td>'min_child_weight': 3 <br>
+                  'max_depth': 3 <br>
+                  'learning_rate': 0.1 <br>
+                  'gamma': 0.2 <br>
+                  'colsample_bytree': 0.6</td>
+                <td>0.145</td>
+                <td>0.976</td>
+                <td> <img style="width: 150px; height: 150;" src="{%static 'airfoils/airfoils_xgbr_res.png'%}" alt=""></td>
+              </tr>
+              <tr>
+                <th scope="row">Deep Neural Network</th>
+                <td>Manual search with variation of number of <br>epochs, layers, nodes, batch sizes</td>
+                <td>Dense(128, 'ReLU') <br>Dense(256,'ReLU') <br>Dense(1)</td>
+                <td>0.165</td>
+                <td>0.969</td>
+                <td> <img style="width: 150px; height: 150;" src="{%static 'airfoils/airfoils_dnn_res.png'%}" alt=""></td>
+              </tr>
+            </tbody>
+          </table>
 
         </div>
       </div>
@@ -179,67 +182,26 @@
 
       <div class="row" >
         <div class="col-lg-4">
-          <h4 style="margin-top:70px">Final results and thoughts</h4>
-          <h5>Final results</h5>
-          What do we have in the end? We have a bunch of models which are not outsganding from RMSE point of view. But what we can do is to imitate a random forest regression approach, i.e. having numerous (not in my case but still) models, take an average of their predictions.
-
-          <br>
-          <h6>Thoughts</h6>
-          <p>What can be done to improve the model? We can do several things:
-          <li>Obtain some external data which possibly affects the sales.</li>
-          <li></li>
-          As soon as the data is 1-dimensional to build a more accurate model we need to generate more features. <br>
-          One approach is to generate polynomial features, but as soon as we have time series data it makes more sense to generate features
-          such as previous values (lags), rollong sum and rolling mean. Tim window for feature generation is 52 week.</p>
+          <h5>Conclusion</h5>
+          <p>Though the metrics of the obtained model are not outstanding, it is important to take into account that it was gained only using miniscule number of records (118).</p>
+          <p>Another important point is to have a dataset stratified by angle of attack, because right now there is a great correlation between the target variable and the angle of attack variable (see the plot on the right, <i>alpha</i> is the angle of attack variable, <i>ysr</i> are the coordinates variables).</p>
+          <p>At the moment it is not possible because of low number of records and unique angle of attack values for each airfoil. The latter can be solved by building another model predicting target variable for a certain angle of attack of a chosen airfoil.</p>
+          <p>But anyway I am convinced that gaining more data will lead to a significant increase in model quality and probably could find application in preliminary ranking of airfoils for a given task.</p>
 
         </div>
         <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
-
+          <iframe style="width: 100%; height: 400px;" src="{%static 'airfoils/airfoils_corr.html'%}"></iframe>
         </div>
       </div>
 
 
 
-
-      <div class="row" >
-        <div class="col-lg-4">
-
-          <h6 style="margin-top:70px">Colors and countries</h6>
-
-            <p> I considered countries with the highest GDP in this barplot. It's interesting that India demonstrates a significant variety of used RGB colours and lack of black compared to other ones.
-              Russian movie posters do not involve much use of white color, though it has RGB usage comparable with India. Canadian movie posters are the ones that use black the most (from the considered countries).
-              It is hard to tell the distinct reasons for the observed differences but probably it has cultural reasons.
-            </p>
-        </div>
-        <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_countries.html'%}" title="Colors vs Countries" ></iframe>
-
-        </div>
-      </div>
-
-
-      <div class="row" >
-
-        <div class="col-lg-4">
-          <h6>Colors and countries on the map</h6>
-            <p> I tried to define the most used color from RGB range expecting to get a colourful map, but it turns out that the most used color is orange. This fact can be explained by the presence of people on the posters regardless of country.
-            </p>
-        </div>
-
-        <div class="col-lg-8">
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_map.html'%}" title="Colors vs Countries" ></iframe>
-        </div>
-
-      </div>
 
 
     </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
-  <footer style="color:grey; position: relative; bottom:10px;left:10px;">
+  <footer style="color:grey; position: relative; bottom:10px;left:10px; margin-top:40px">
     Made using Django, Bootstrap, JavaScript and AWS by Ilia Notin
   </footer>
 </html>
