--- a/templates/sales.html
+++ b/templates/sales.html
@@ -6,12 +6,42 @@
     {%load static%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{%static 'favicon.png'%}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css">
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js">
+    </script>
+    <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap4.min.js">
+    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js">
+    </script>
+
+
+    <script>
+    $(document).ready(function() {
+    $('#sortTable').DataTable();
+} );
+  </script>
   </head>
+
+
 
   <body>
     <a href="{%url 'home'%}"><button type="button" style="margin-top:20px; margin-left:12px; color:grey;" class="btn btn-light">← Back home</button></a>
-    <h1 style="margin-top:30px; margin-left: 10px;">Sales<a href="https://github.com/inotin/moviePosters"><img style="height:28px" src="{%static 'GitHub-Mark-120px-plus.png'%}" alt=""></a></h1>
+    <h1 style="margin-top:30px; margin-left: 15px;">Sales<a href="https://github.com/inotin/sales"><img style="height:28px" src="{%static 'GitHub-Mark-120px-plus.png'%}" alt=""></a></h1>
+
+
+
     <div class="container" style="max-width: 100%;">
+
+      <div class="row" style="margin-bottom:30px;">
+        <div class="col-lg">
+            <span class="badge rounded-pill bg-primary">Time Series analysis</span>
+            <span class="badge rounded-pill bg-primary">Regression</span>
+            <span class="badge rounded-pill bg-primary">Neural networks</span>
+            <span class="badge rounded-pill bg-primary">Recommender systems</span>
+        </div>
+      </div>
+
       <div class="row" >
         <div class="col-lg-4">
           <h5>Overview</h5>
@@ -40,7 +70,7 @@
         <div class="col-lg-8">
 
           <!-- <iframe style="width: 100%; height: 400px;" src="{%static 'sales/dailySales.html'%}" title="dailySales" ></iframe> -->
-          <img style="width: 100%; margin-top: 45px;" src="{%static 'sales/img1_dailySales.png'%}" alt="img1">
+          <img style="width: 100%; margin-top: 45px;" src="{%static 'sales/dailySales.png'%}" alt="img1">
         </div>
       </div>
 
@@ -84,21 +114,20 @@
         <div class="col-lg-8">
 
           <iframe style="width: 100%; height: 850px;" src="{%static 'sales/decomposition.html'%}" title="decomposition" ></iframe>
-          <img style="width: 100%" src="{%static 'sales/boxPlots.png'%}" alt="boxplots">
+          <!-- <img style="width: 100%" src="{%static 'sales/boxPlots.png'%}" alt="boxplots"> -->
         </div>
       </div>
 
 
       <div class="row" style="margin-top:40px">
         <div class="col-lg-4">
-          <h6 style="margin-top:40px">Time series decomposition</h6>
           <p>Boxplots were formed which allow to assess the significance of the differences month-to-month (seasonality) and year-to-year (trend)</p>
           <p>It can be seen that though in 2020 the interquartile range is enormous (thanks to gloabal pandemy) there's a slight positive trend. <br>
           Seasonality is pretty distinct which is a good sign for predictions.</p>
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 850px;" src="{%static 'sales/decomposition.html'%}" title="decomposition" ></iframe>
+          <!-- <iframe style="width: 100%; height: 850px;" src="{%static 'sales/decomposition.html'%}" title="decomposition" ></iframe> -->
           <img style="width: 100%" src="{%static 'sales/boxPlots.png'%}" alt="boxplots">
         </div>
       </div>
@@ -121,11 +150,59 @@
           <p>As soon as the data is 1-dimensional to build a more accurate model we need to generate more features. <br>
           One approach is to generate polynomial features, but as soon as we have time series data it makes more sense to generate features
           such as previous values (lags), rollong sum and rolling mean. Tim window for feature generation is 52 week.</p>
-
+          I was not totally satisfied with metrics for regression models and decided to try a more complex approach - neural networks.
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
+          <table id='sortTable' class="table table-hover table-sm" style="margin-top:100px;margin-left:40px;vertical-align: middle;">
+            <thead>
+              <tr>
+                <th scope="col" style="width: 25%;">Model name</th>
+                <th scope="col">Model selection method</th>
+                <th scope="col">Model parameters</th>
+                <th scope="col">RMSE</th>
+                <th scope="col">R2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Random Forest Regressor</th>
+                <td>RandomizedSearchCV</td>
+                <td>'n_estimators': 800 <br>
+                  'min_samples_split': 5 <br>
+                 'min_samples_leaf': 2 <br>
+                 'max_features': 'auto' <br>
+                 'max_depth': None <br>
+                 'bootstrap': True}</td>
+                <td>41619269.83</td>
+                <td>0.719</td>
+              </tr>
+              <tr class>
+                <th scope="row">Gradient boosting</th>
+                <td>GridSearchCV</td>
+                <td>'max_depth':3 <br>
+                    'n_estimators':200</td>
+                <td>41945316.74</td>
+                <td>0.650</td>
+              </tr>
+              <tr>
+                <th scope="row">CatBoost</th>
+                <td>GridSearchCV</td>
+                <td>learning_rate': 0.1 <br>'max_depth': 2 <br> 'n_estimators': 100</td>
+                <td>42637222.43</td>
+                <td>0.638</td>
+                <!-- <td> <img style="width: 150px; height: 150;" src="{%static 'airfoils/airfoils_dnn_res.png'%}" alt=""></td> -->
+              </tr>
+              <tr class="table-success">
+                <th scope="row">XGBoost</th>
+                <td>GridSearchCV</td>
+                <td>'learning_rate': 0.01<br> 'max_depth': 3<br> 'n_estimators': 500</td>
+                <td>36596551.07</td>
+                <td>0.782</td>
+
+              </tr>
+            </tbody>
+          </table>
 
         </div>
       </div>
@@ -134,89 +211,75 @@
 
       <div class="row" >
         <div class="col-lg-4">
-          <h5>LSTM</h5>
-          I was not totally satisfied with metrics for regression models and decided to try a more complex approach - neural networks.
+          <h5 style="margin-top:30px">LSTM</h5>
           If we consider time series, the natural choice is a long short-term memory neural networks which are basically a type of
           recurrent neural networks which allow to take into the account precedent data (or 'remember' it) so it's a great option for time series prediction tasks.
           <br>
-          I experimented with following approaches:
-          <li>Vanilla LSTM with rule-of-thumb hyperparameters</li>
-          <li>Vanilla LSTM with rule-of-thumb hyperparameters and early stopping</li>
-          <li>Stacked LSTM</li>
-          <li>Vanilla LSTM with a grid search for hyperparameter tuning (defining the optimal number of hidden units and epochs) </li>
-          <br>
           <h6>Train and test sets</h6>
-          I split my data into train and test sets with proportions of 85% and 15% respectively which can seem strange.
-          But what I wanted to do is to gain maximum sequence information due to unusual data of year 2020, which was caused by Covid.
-          Moreover, the train set had a spike in January, common for all precedent years, which is a nice feature for estimating accuracy of the model.
-
+          I split my data into train and test sets with proportions of 80% and 20% respectively though I thought about increasing test size up to 85% to gain maximum sequence information due to unusual data of year 2020, which was caused by Covid.
+          <!-- But what I wanted to do is to gain maximum sequence information due to unusual data of year 2020, which was caused by Covid.
+          Moreover, the train set had a spike in January, common for all precedent years, which is a nice feature for estimating accuracy of the model. -->
+          <br>
+          <p>I performed a self-made grid search which iterated over following parameters:
+            <li>Number of hidden units: 5, 10, 15, 25, 50</li>
+            <li>Number of stacked LSTM layers over the first one: 0,1,2</li>
+          </p>
+          <p>I used early stoppingg approach with maximum number of epochs equal to 1000 and patience parameter of 20. For each combination of parameters I fitted 5 models and on the plot on the right you can see mean RMSE values for those models.</p>
         </div>
         <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
+            <iframe style="width: 100%; height: 600px;" src="{%static 'sales/sales_LSTM.html'%}" title="sales_LSTM" ></iframe>
 
         </div>
       </div>
 
+
+
+      <div class="row" >
+        <div class="col-lg-4">
+          <h4 style="margin-top:70px">Recommender system</h4>
+          <p>As a part of this project a recommender system was developed using user-user (customer-customer) approach, which means that for each customer I created a sparse vector of products which contained values of number of purchased items.
+          That vectors were used to identify similar customers by cosine similarity. As soon as there were not so many customers I simply calculated pairwise cosine similarity and found closest pairs with each customer. <br>
+          Then I found products which were purchased by similar customers and were not purchased by the considered customer. This products formed a recommendation list for a particular customer which then was used by sales team.</p>
+        </div>
+        <div class="col-lg-4">
+          <img style="width: 100%;" src="{%static 'sales/heatmap.png'%}" alt="heatmap">
+          <!-- <iframe style="width: 100%; height: 600px;" src="{%static 'sales/resultsAll.html'%}" title="" ></iframe> -->
+
+        </div>
+        <div class="col-lg-4">
+          <img style="width: 100%;" src="{%static 'sales/df_recommendation.png'%}" alt="df_recommendation">
+          <!-- <iframe style="width: 100%; height: 600px;" src="{%static 'sales/resultsAll.html'%}" title="" ></iframe> -->
+
+        </div>
+      </div>
 
 
       <div class="row" >
         <div class="col-lg-4">
           <h4 style="margin-top:70px">Final results and thoughts</h4>
           <h5>Final results</h5>
-          What do we have in the end? We have a bunch of models which are not outsganding from RMSE point of view. But what we can do is to imitate a random forest regression approach, i.e. having numerous (not in my case but still) models, take an average of their predictions.
-
+          What do we have in the end? We have a bunch of models which are not outstanding from RMSE point of view.
+          But what we can do is to imitate a voting regressor, i.e. having numerous (not in my case but still) models, take an average of their predictions.
           <br>
-          <h6>Thoughts</h6>
           <p>What can be done to improve the model? We can do several things:
-          <li>Obtain some external data which possibly affects the sales.</li>
-          <li></li>
-          As soon as the data is 1-dimensional to build a more accurate model we need to generate more features. <br>
-          One approach is to generate polynomial features, but as soon as we have time series data it makes more sense to generate features
-          such as previous values (lags), rollong sum and rolling mean. Tim window for feature generation is 52 week.</p>
-
+          <li>Increasing number of features by obtaining some external data which possibly affects the sales, e.g. volume of housing commissioned, GDP, etc. </li>
+          <li>Stratify customers by clustering or by amount of purchased goods</li>
+          <li>Obtain more data</li></p>
+          <p>Regarding Recommender system, the following question can be discussed with stakeholders: should we check if companies are similar in terms of total sales or half a year or last month, etc?
+            From statistical point of view we could approach this question by defining the mean period which leads to significant difference in companies purchases. Say we set a threshold of 20%:
+            <li>1. We get a compnay's product set for the 3rd/6th month (to avoid possible significant differences during the initial period when product range is unstable)</li>
+            <li>2. Then with a time step of 1 month we check if If the company's top-N product range differs by 20%</li>
+            <li>3. Then we can define the mean period for all companies</li>
+          </p>
         </div>
         <div class="col-lg-8">
 
-          <iframe style="width: 100%; height: 600px;" src="{%static 'movies_years.html'%}" title="Colors vs Years" ></iframe>
+          <iframe style="width: 100%; height: 600px;" src="{%static 'sales/resultsAll.html'%}" title="" ></iframe>
 
         </div>
       </div>
 
 
-
-
-      <div class="row" >
-        <div class="col-lg-4">
-
-          <h6 style="margin-top:70px">Colors and countries</h6>
-
-            <p> I considered countries with the highest GDP in this barplot. It's interesting that India demonstrates a significant variety of used RGB colours and lack of black compared to other ones.
-              Russian movie posters do not involve much use of white color, though it has RGB usage comparable with India. Canadian movie posters are the ones that use black the most (from the considered countries).
-              It is hard to tell the distinct reasons for the observed differences but probably it has cultural reasons.
-            </p>
-        </div>
-        <div class="col-lg-8">
-
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_countries.html'%}" title="Colors vs Countries" ></iframe>
-
-        </div>
-      </div>
-
-
-      <div class="row" >
-
-        <div class="col-lg-4">
-          <h6>Colors and countries on the map</h6>
-            <p> I tried to define the most used color from RGB range expecting to get a colourful map, but it turns out that the most used color is orange. This fact can be explained by the presence of people on the posters regardless of country.
-            </p>
-        </div>
-
-        <div class="col-lg-8">
-          <iframe style="width: 100%; height: 620px;" src="{%static 'movies_map.html'%}" title="Colors vs Countries" ></iframe>
-        </div>
-
-      </div>
 
 
     </div>
